# polly-ai-companion

./: .gitignore  CMakeLists.txt  README.md  README.txt  SpeechToText README.txt  package-lock.json  package.json  polly.sh
include/polly/: Display.h  LLMProcessing.h  Polly.h  STT.h  SpeechRecognizer.h  TextToSpeech.h  VoiceCustomization.h
src/: Display.cpp  LLMProcessing.cpp  Polly.cpp  STT.cpp  SpeechRecognizer.cpp  TextToSpeech.cpp  VoiceCustomization.cpp  Weather.cpp  llm_service.py  main.cpp
webui/: index.html  main.js  readme.txt
